# executor_balancer

./: Dockerfile  README.md  TODO.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
core/: models.py  serializers.py  urls.py  utils.py  views.py
dispatcher/: candidate_info.py  locks.py  models.py  scoring.py  serializer.py  tasks.py  urls.py  views.py
dispatcher/migrations/: 0001_initial.py
executor_balancer/: asgi.py  celery.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
